Fix some small things from code review:
add jquery dependency, in recurly.js

onSignedDocument - dont use .bind(this). Use self form now on instead

remove // from django template
in simple_document_model   — Make it just a backbone model, and add getters functions for the values I need

remove filters-truncate, use text-overflow instead

use .border-radius mixin and mixin for background image in landing-page less file

--- a/frontend/app/less/postsignview/create_account_section.less
+++ b/frontend/app/less/postsignview/create_account_section.less
@@ -3,34 +3,31 @@
 
   &.nj {
     &.sv {
-      background-image: url('/img/partnerbanners/nj_bg_se.png');
+      background-image: url(~"@{img-base-url}/partnerbanners/nj_bg_se.png");
     }
 
     &.en {
-      background-image: url('/img/partnerbanners/nj_bg.png');
+      background-image: url(~"@{img-base-url}/partnerbanners/nj_bg.png");
     }
   }
 
   &.phone-house {
     &.sv {
-      background-image: url('/img/partnerbanners/phonehouse_bg_se.png');
+      background-image: url(~"@{img-base-url}/partnerbanners/phonehouse_bg_se.png");
     }
 
     &.en {
-      background-image: url('/img/partnerbanners/phonehouse_bg.png');
+      background-image: url(~"@{img-base-url}/partnerbanners/phonehouse_bg.png");
     }
   }
 
   .button {
-    background-color: #A2C617; // TODO(jens): Remove usage of this color, it's not a site-wide color.
+    background-color: #A2C617; // TODO(jens): Remove usage of this color, it"s not a site-wide color.
     background-position: initial initial;
     background-repeat: initial initial;
     box-shadow: none;
     border: none;
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
+    .border-radius(3px, 3px, 3px, 3px);
     margin-top: 300px;
     margin-left: 404px;
   }
